--- a/master.css
+++ b/master.css
@@ -1,19 +1,30 @@
+@font-face {
+  font-family: 'Calculator';
+  src: url("/Calculator.ttf");
+}
+
 body {
-  font-family: "Helvetica Neue";
   background-color: rgba(43, 64, 80, 0.65);
 }
 
 .answer-container {
   margin: 20px 0;
-  border: 1px solid black;
-  font-size: 40px;
-  margin-top: 20px;
+  border: 2px solid black;
+  font-size: 82px;
+  font-family: "Calculator";
+  font-weight: 500;
 }
 
 .input-container {
   margin-bottom: 10px;
 }
 
-button {
+.form-control {
+  height: 48px;
+  font-size: 24px;
+}
+
+.btn {
   width: 100%;
+  font-size: 24px;
 }
